# repo-wiki-agent-skills

./: .gitignore  CHANGELOG.md  CONFLUENCE_MCP_SETUP.md  CONFLUENCE_PAGE_CONTENT.md  CONTRIBUTING.md  CURSOR_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MCP_FIXED.md  PUBLISH_TO_CONFLUENCE.md  QUICK_START.md  README.md  RELEASE.md  SECURITY.md  SETUP_COMPLETE.md  pyproject.toml  rpd.md
.cursor/commands/: wiki-init.md  wiki-update.md  wiki-validate.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_QUICKREF.md  RELEASE_WORKFLOW.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
repo-wiki/: SKILL.md
repo-wiki-generate/: SKILL.md
repo-wiki-initialize/: SKILL.md
repo-wiki-update/: SKILL.md
repo-wiki-validate/: SKILL.md
repo-wiki/assets/templates/: architecture-page.md.template  mkdocs.yml.template  overview-page.md.template
repo-wiki/references/: ARCHITECTURE.md  TEMPLATES.md
repo-wiki/scripts/: detect_managed_blocks.py  generate_permalinks.py
scripts/: repo_wiki_cli.py  repo_wiki_llm.py  wiki-init.sh  wiki-update.sh  wiki-validate.sh
skills/repo-wiki-detect/: SKILL.md
skills/repo-wiki-index/: SKILL.md
skills/repo-wiki/assets/templates/: component-page.md.template
skills/repo-wiki/references/: CITATION-SPEC.md  STATE-FORMAT.md
skills/repo-wiki/scripts/: compute_page_impact.py  validate_citations.py
